fix: added a z-index property to the card-front and card-back so that one can be placed on top of the other.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,9 @@ h2 {
 }
 
 /*----------------------------------Card Board*/
+#gameBoard {
+    position: relative;
+}
 .game-card-column {
     padding: 5px;
     font-family: 'Uncial Antiqua', cursive;
@@ -54,11 +57,15 @@ h2 {
 
 .card-front {
     position: absolute;
+    z-index: 200;
+}
+
+.card-back {
     z-index: 1;
 }
 
-.game-card {
-    position: relative;
+.card-front p {
+    background-color: #E5B670;
 }
 
 /*----------------------------------Buttons Section*/
